<resources>
    <string name="app_name">Wifi Action</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_log">Logs</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_notification">Add Action</string>



    <string name="cb_on_connect">Execute on connect</string>
    <string name="cb_on_leave">Execute on leave</string>

    <plurals name="actions">
        <item quantity="one">%s Action selected</item>
        <item quantity="other">%s Actions selected</item>
    </plurals>

    <!-- Add Action -->
    <string-array name="action_type">
        <item value="1">Send SMS</item>
        <item value="2">Change Bluetooth state</item>
        <item value="3">Change GPS state</item>
        <item value="4">Show Notification</item>
    </string-array>
    <string name="act_et_title_hint">Title</string>
    <string name="act_et_message_hint">Message in the Notification</string>
    <string name="act_et_number_hint">Number</string>
    <string name="act_et_sms_hint">Message in the SMS</string>
    <string name="act_bn_add">Save</string>
    <string name="act_sw_onoff">On/Off</string>


    <!-- Logs -->
    <string name="title_activity_log">Logs</string>

</resources>
