<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.koki.app.wifiaction.ActionActivity">

    <Spinner
        android:id="@+id/spActionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_below="@id/spActionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/act_et_title_hint"/>

    <Spinner
        android:id="@+id/spWifis"
        android:layout_below="@id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbOnConnect"
        android:layout_below="@id/spWifis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_on_connect"/>

    <CheckBox
        android:id="@+id/cbOnLeave"
        android:layout_below="@id/cbOnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_on_leave"/>


    <!--- Depending on the action widgets -->

    <EditText
        android:id="@+id/etMessage1"
        android:layout_below="@id/cbOnLeave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_et_message_hint"/>

    <EditText
        android:id="@+id/etMessage2"
        android:layout_below="@id/etMessage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_et_message_hint"/>

    <Switch
        android:id="@+id/swBoolean"
        android:layout_below="@id/etMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_sw_onoff"/>

    <Button
        android:id="@+id/bnAdd"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_bn_add"/>

</RelativeLayout>
